--- a/DoAnWebAPI_WebMVC/Views/Admin/AdminApproval.cshtml
+++ b/DoAnWebAPI_WebMVC/Views/Admin/AdminApproval.cshtml
@@ -79,6 +79,6 @@
         </div>
     </div>
 </div>
-
-
-<script src="~/js/AdminApproval.js"></script>
+@section Scripts {
+    <script src="~/js/AdminApproval.js" asp-append-version="true"></script>
+}
