--- a/DoAnWebAPI_WebMVC/Views/Shared/_Adminlayout.cshtml
+++ b/DoAnWebAPI_WebMVC/Views/Shared/_Adminlayout.cshtml
@@ -26,6 +26,7 @@
             <main class="flex-1 overflow-y-auto p-8 pt-20 lg:pt-8">
                 @RenderBody()
             </main>
+            @RenderSection("Scripts", required: false)
 
         </div>
 
