--- a/DoAnWebAPI_WebMVC/Views/Shared/_Layout.cshtml
+++ b/DoAnWebAPI_WebMVC/Views/Shared/_Layout.cshtml
@@ -37,10 +37,11 @@
     </script>
     @await Html.PartialAsync("~/Views/Image/ImageDetail.cshtml")
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/js/apiServices.js" asp-append-version="true"></script>
     <script src="~/js/Header.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/Footer.js" asp-append-version="true"></script>
-    <script src="~/js/apiServices.js" asp-append-version="true"></script>
+    <script src="~/js/HomeBody.js" asp-append-version="true"></script>
     
     <script src="https://unpkg.com/lucide@latest"></script>
 
