--- a/DoAnWebAPI_WebMVC/Views/Shared/_layoutHeader.cshtml
+++ b/DoAnWebAPI_WebMVC/Views/Shared/_layoutHeader.cshtml
@@ -37,7 +37,7 @@
                 {
                     <div class="relative">
                         <button id="user-menu-button" class="flex items-center gap-2 px-4 py-2 rounded-lg hover:bg-gray-200">
-                            <img id="user-avatar" src="/default-avatar.png" class="w-8 h-8 rounded-full border" />
+                            <img id="user-avatar" src="~/Logo.png" class="w-8 h-8 rounded-full border" />
                             <span id="user-name">Đang tải...</span>
                             <div data-lucide="chevron-down" class="w-4 h-4"></div>
                         </button>
